crates/jsonrpc/error/macro/tests/ui/duplicate_tag.stderr
error: duplicate `tag` argument
 --> tests/ui/duplicate_tag.rs:3:28
  |
3 | #[rpc_error(tag = "first", tag = "second")]
  |                            ^^^
